...
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="325dp"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:text="Sign Up as Organizer"
            android:textColor="@color/white"
...
